--- a/style.css
+++ b/style.css
@@ -189,7 +189,7 @@ section .title::after{
 .home{
     display: flex;
     /* background: url("images/banner-angle1.png") no-repeat center; */
-     background: url("images/banner-under-construction3.png") no-repeat center;
+     background: url("images/banner-angle1.png") no-repeat center;
     height: 100vh;
     color: var(--main-text-color);
     min-height: 500px;
@@ -261,7 +261,7 @@ section .title::after{
 .about .about-content .right p{
     text-align: justify;
 }
-.about .about-content .right a{
+.about .about-content .right button{
     display: inline-block;
     background: var(--btn-color);
     color: #fff;
@@ -273,7 +273,7 @@ section .title::after{
     border: 2px solid var(--btn-color);
     transition: all 0.3s ease;
 }
-.about .about-content .right a:hover{
+.about .about-content .right button:hover{
     color: green;
     background: none;
     border: 1px solid green;
@@ -326,82 +326,6 @@ section .title::after{
     margin: 10px 0 7px 0;
 }
 
-/* skills section styling */
-/* 
-.skills .title::after{
-    content: "what i know";
-}
-.skills .skills-content .column{
-    width: calc(50% - 30px);
-}
-.skills .skills-content .left .text{
-    font-size: 20px;
-    font-weight: 600;
-    margin-bottom: 10px;
-}
-.skills .skills-content .left p{
-    text-align: justify;
-}
-.skills .skills-content .left a{
-    display: inline-block;
-    background: var(--btn-color);
-    color: #fff;
-    font-size: 18px;
-    font-weight: 500;
-    padding: 8px 16px;
-    margin-top: 20px;
-    border-radius: 6px;
-    border: 2px solid var(--btn-color);
-    transition: all 0.3s ease;
-}
-.skills .skills-content .left a:hover{
-    color: var(--btn-color);
-    background: none;
-}
-.skills .skills-content .right .bars{
-    margin-bottom: 15px;
-}
-.skills .skills-content .right .info{
-    display: flex;
-    margin-bottom: 5px;
-    align-items: center;
-    justify-content: space-between;
-}
-.skills .skills-content .right span{
-    font-weight: 500;
-    font-size: 18px;
-}
-.skills .skills-content .right .line{
-    height: 5px;
-    width: 100%;
-    background: lightgrey;
-    position: relative;
-}
-.skills .skills-content .right .line::before{
-    content: "";
-    position: absolute;
-    height: 100%;
-    left: 0;
-    top: 0;
-    background: var(--btn-color);
-}
-.skills-content .right .html::before{
-    width: 90%;
-}
-.skills-content .right .css::before{
-    width: 60%;
-}
-.skills-content .right .js::before{
-    width: 80%;
-}
-.skills-content .right .php::before{
-    width: 50%;
-}
-.skills-content .right .mysql::before{
-    width: 70%;
-} */
-
-/* testimonials section styling */
 .teams .title::after{
     content: "Who I've worked with";
 }
@@ -439,6 +363,7 @@ section .title::after{
     border-radius: 2%;
     border: 1px solid var(--btn-color);
     transition: all 0.3s ease;
+    background-size: cover;
 }
 .teams .carousel .card:hover img{
     border-color: #fff;
@@ -464,6 +389,9 @@ section .title::after{
 .owl-dot:hover{
     background: var(--btn-color)!important;
 }
+/* .box img {
+    background-size: cover;
+} */
 
 /* contact section styling */
 .contact {
@@ -473,7 +401,7 @@ section .title::after{
     content: "Get in touch";
 }
 .contact .contact-content .column{
-    width: calc(50% - 30px);
+    width: calc(30% - 20px);
 }
 .contact .contact-content .text{
     font-size: 20px;
