--- a/style.css
+++ b/style.css
@@ -349,6 +349,7 @@ section .title::after{
 }
 .teams .carousel .card:hover .box{
     transform: scale(1.05);
+    color: #fff;
 }
 .teams .carousel .card .text{
     font-size: 25px;
@@ -389,17 +390,13 @@ section .title::after{
 .owl-dot:hover{
     background: var(--btn-color)!important;
 }
-/* .box img {
-    background-size: cover;
-} */
 
-/* contact section styling */
 .contact {
     background: var(--div-background-color);
 }
-.contact .title::after{
+/* .contact .title::after{
     content: "Get in touch";
-}
+} */
 .contact .contact-content .column{
     width: calc(30% - 20px);
 }
@@ -432,66 +429,9 @@ section .title::after{
 .contact .contact-content .info .sub-title{
     color: #333;
 }
-.contact .right form .fields{
-    display: flex;
-}
-.contact .right form .field,
-.contact .right form .fields .field{
-    height: 45px;
-    width: 100%;
-    margin-bottom: 15px;
-}
-.contact .right form .textarea{
-    height: 80px;
-    width: 100%;
-}
-.contact .right form .name{
-    margin-right: 10px;
-}
-.contact .right form .email{
-    margin-left: 10px;  
-}
-.contact .right form .field input,
-.contact .right form .textarea textarea{
-    height: 100%;
-    width: 100%;
-    border: 1px solid lightgrey;
-    border-radius: 6px;
-    outline: none;
-    padding: 0 15px;
-    font-size: 17px;
-    font-family: 'Poppins', sans-serif;
-    transition: all 0.3s ease;
-}
-.contact .right form .field input:focus,
-.contact .right form .textarea textarea:focus{
-    border-color: #b3b3b3;
-}
-.contact .right form .textarea textarea{
-    padding-top: 10px;
-    resize: none;
-}
-.contact .right form .button{
-    height: 47px;
-    width: 170px;
-}
-.contact .right form .button button{
-    width: 100%;
-    height: 100%;
-    border: 2px solid var(--btn-color);
-    background: var(--btn-color);
-    color: #fff;
-    outline: none;
-    font-size: 20px;
-    font-weight: 500;
-    border-radius: 6px;
-    cursor: pointer;
-    transition: all 0.3s ease;
-}
-.contact .right form .button button:hover{
-    color: green;
-    border: 1px solid green;
-    background: none;
+
+.contact .contact-content .far-right{
+    width: 45%;
 }
 
 /* footer section styling */
