--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ section .title::after{
 .navbar.sticky{
     padding: 15px 0;
     background: #346991;
+    color: white;
 }
 .navbar .max-width{
     display: flex;
@@ -140,13 +141,18 @@ section .title::after{
     transition: color 0.3s ease;
 }
 .navbar .menu li a:hover{
-     color: var(--btn-hover-color);
+     /* color: var(--btn-hover-color); */
     border: var(--btn-hover-border);
+    color: green;
     padding: 2px 2px;
     background: none;
 }
-.navbar.sticky .menu li a:hover{
+.navbar.sticky .menu li a{
     color: #fff;
+}
+.navbar.sticky .menu li a:hover{
+    color: #000;
+   border: none;
 }
 
 /* menu btn styling */
@@ -324,6 +330,11 @@ section .title::after{
     font-size: 25px;
     font-weight: 500;
     margin: 10px 0 7px 0;
+}
+.services .serv-content .card .box span a{
+    color: #000;
+    font-style: italic;
+    text-decoration-line: underline;
 }
 
 .teams .title::after{
